--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost/hogwarts  
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 students.avatar.dir.path=avatars
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+#spring.data.web.pageable.max-page-size=50
 #//jdbc:postgresql://localhost:5432/hogwarts
 #spring.datasource.username=student
 #spring.datasource.password=chocolatefrog
