--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.jpa.hibernate.ddl-auto=validate
 
 students.avatar.dir.path=avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+app.env=dev
 #spring.data.web.pageable.max-page-size=50
 #//jdbc:postgresql://localhost:5432/hogwarts
 #spring.datasource.username=student
