--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost/hogwarts  
+spring.datasource.url=jdbc:postgresql://localhost/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto=validate
 
 students.avatar.dir.path=avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+spring.jpa.properties.hibernate.format_sql=true
 
 app.env=dev
 #spring.data.web.pageable.max-page-size=50
