HW test_dock_02

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,11 +2,10 @@
 #spring.datasource.username=student
 #spring.datasource.password=chocolatefrog
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
 students.avatar.dir.path=avatars
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
-
 
 app.env=dev 
