--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
-#spring.datasource.url=jdbc:postgresql://localhost/hogwarts
-#spring.datasource.username=student
-#spring.datasource.password=chocolatefrog
+spring.datasource.url=jdbc:postgresql://localhost/hogwarts
+spring.datasource.username=student
+spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto=validate
 
 students.avatar.dir.path=avatars
